<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/HomeFragment">

    <fragment
        android:id="@+id/HomeFragment"
        android:name="com.dgood.cardservicesapp.HomeFragment"
        android:label="@string/home_fragment_label"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_PaymentFragment"
            app:destination="@id/PaymentFragment" />
        <action
            android:id="@+id/action_HomeFragment_to_ReceiptListFragment"
            app:destination="@id/ReceiptListFragment" />
        <action
            android:id="@+id/action_HomeFragment_to_AppHelpFragment"
            app:destination="@id/AppHelpFragment" />
    </fragment>
    <fragment
        android:id="@+id/PaymentFragment"
        android:name="com.dgood.cardservicesapp.PaymentFragment"
        android:label="@string/payment_fragment_label"
        tools:layout="@layout/fragment_payment">

        <action
            android:id="@+id/action_PaymentFragment_to_HomeFragment"
            app:destination="@id/HomeFragment" />
        <action
            android:id="@+id/action_PaymentFragment_to_ReceiptDetailFragment"
            app:destination="@id/ReceiptDetailFragment" />


    </fragment>
    <fragment
        android:id="@+id/ReceiptListFragment"
        android:name="com.dgood.cardservicesapp.ReceiptListFragment"
        android:label="@string/receipt_list_label"
        tools:layout="@layout/fragment_receipt_list">

        <action
            android:id="@+id/action_ReceiptListFragment_to_ReceiptDetailFragment"
            app:destination="@id/ReceiptDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/ReceiptDetailFragment"
        android:name="com.dgood.cardservicesapp.ReceiptDetailFragment"
        android:label="@string/receipt_detail_label"
        tools:layout="@layout/fragment_receipt_detail">

        <action
            android:id="@+id/action_ReceiptDetailFragment_to_ReceiptListFragment"
            app:destination="@id/ReceiptListFragment" />
        <action
            android:id="@+id/action_ReceiptDetailFragment_to_HomeFragment"
            app:destination="@id/HomeFragment" />
    </fragment>
    <fragment
        android:id="@+id/AppHelpFragment"
        android:name="com.dgood.cardservicesapp.AppHelpFragment"
        android:label="@string/app_help_label"
        tools:layout="@layout/fragment_app_help">

        <action
            android:id="@+id/action_AppHelpFragment_to_HomeFragment"
            app:destination="@id/HomeFragment" />
    </fragment>
</navigation>