<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaymentFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">


        <TextView
            android:id="@+id/instructions_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_order_id"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/order_id_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/sample_id"
            android:inputType="text"
            android:autofillHints="Enter Order Id"
            android:maxLength="6"
            android:paddingTop="40dp"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@id/instructions_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/generate_order_id_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:text="@string/generate_id"
            android:textColor="@color/white"
            android:backgroundTint="@color/blue"
            app:layout_constraintTop_toBottomOf="@id/order_id_edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="20sp"
            />
        <Spinner
            android:id="@+id/currency_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/generate_order_id_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="bottom"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/currency_symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/currency_symbol"
            android:textSize="23sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@id/amount_edit_text"
            app:layout_constraintTop_toBottomOf="@id/currency_spinner" />

        <EditText
            android:id="@+id/amount_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/sample_amount"
            android:autofillHints="Amount"
            android:inputType="numberDecimal"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/currency_symbol"
            app:layout_constraintTop_toBottomOf="@id/currency_spinner" />

        <Button
            android:id="@+id/make_payment_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:text="@string/make_payment"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:backgroundTint="@color/blue"
            app:layout_constraintTop_toBottomOf="@id/amount_edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>