<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AppHelpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/app_logo"
            android:contentDescription="@string/app_info"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/version_template"
            android:textSize="30sp"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/app_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/help_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/help_message"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/app_version"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_contact_developer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/contact_developer"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/blue"
            app:layout_constraintTop_toBottomOf= "@id/help_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_default="spread" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>